chore: Use constructor injection instead of field injection in DataSeedService.java